PROJECT(libi210)
cmake_minimum_required(VERSION 3.1)

SET(CMAKE_CXX_STANDARD 11)

#SET(Boost_USE_STATIC_LIBS ON)
#SET(Boost_USE_MULTITHREADED OFF)
#FIND_PACKAGE(Threads)
#FIND_PACKAGE(Boost 1.55 COMPONENTS system filesystem REQUIRED)

ADD_SUBDIRECTORY(libregmap)

FILE(GLOB LIB_SOURCES "src/*.cpp")
INCLUDE_DIRECTORIES("include" "libregmap/include")

ADD_LIBRARY(i210-static STATIC ${LIB_SOURCES})
TARGET_LINK_LIBRARIES(i210-static libregmap-static)
ADD_LIBRARY(i210 SHARED ${LIB_SOURCES})
TARGET_LINK_LIBRARIES(i210 libregmap)
SET_TARGET_PROPERTIES(i210 PROPERTIES POSITION_INDEPENDENT_CODE ON)
